# talk2dom-python

./: README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: rc.yml  test.yaml
examples/: playwright_example.py  selenium_example.py
talk2dom/: __init__.py  chain.py  client.py  core.py  exceptions.py  models.py  playwright.py  selenium.py
tests/: test_core.py
